force-app/main/default/objects/Case_Metric__c/Case_Metric__c.object-meta.xml
<CustomObject>
    <label>Case Metric</label>
    <nameField>
        <label>Case Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>