force-app/main/default/objects/Case_Metric__c/fields/Analysts_Techincal_Skills_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Analysts_Techincal_Skills_Knowledge__c</fullName>
    <label>Analysts Techincal Skills/Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>