force-app/main/default/objects/Case_Metric__c/fields/Articles_Attached_To_Cases__c.field-meta.xml
<CustomField>
    <fullName>Articles_Attached_To_Cases__c</fullName>
    <label>Articles Attached To Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>