force-app/main/default/objects/Case_Metric__c/fields/Articles_Searched_Internal__c.field-meta.xml
<CustomField>
    <fullName>Articles_Searched_Internal__c</fullName>
    <label>Articles Searched Internal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>