force-app/main/default/objects/Case_Metric__c/fields/Cases_Closed_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>Cases_Closed_Same_Day__c</fullName>
    <label>Cases Closed Same Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>