force-app/main/default/objects/Case_Metric__c/fields/Courtesy_Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Professionalism__c</fullName>
    <label>Courtesy/Professionalism</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>