force-app/main/default/objects/Case_Metric__c/fields/Cust_Defects_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Cust_Defects_Resolved__c</fullName>
    <label>Cust Defects Resolved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>