force-app/main/default/objects/Case_Metric__c/fields/Customer_Reported_Defects__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reported_Defects__c</fullName>
    <label>Customer Reported Defects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>