force-app/main/default/objects/Case_Metric__c/fields/Customer_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction__c</fullName>
    <label>Customer Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>