force-app/main/default/objects/Case_Metric__c/fields/First_Contact_Resolution__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Resolution__c</fullName>
    <label>First Contact Resolution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>