force-app/main/default/objects/Case_Metric__c/fields/Num_Articles_Archived__c.field-meta.xml
<CustomField>
    <fullName>Num_Articles_Archived__c</fullName>
    <label>Num Articles Archived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>