force-app/main/default/objects/Case_Metric__c/fields/Num_Renewal_Reps__c.field-meta.xml
<CustomField>
    <fullName>Num_Renewal_Reps__c</fullName>
    <label>Num Renewal Reps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>