force-app/main/default/objects/Case_Metric__c/fields/Num_Support_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Num_Support_Mgmt__c</fullName>
    <label>Num Support Mgmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>