force-app/main/default/objects/Case_Metric__c/fields/Opened_Via_Support_Portal__c.field-meta.xml
<CustomField>
    <fullName>Opened_Via_Support_Portal__c</fullName>
    <label>Opened Via Support Portal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>