force-app/main/default/objects/Case_Metric__c/fields/Overall_Service_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Service_Experience__c</fullName>
    <label>Overall Service Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>