force-app/main/default/objects/Case_Metric__c/fields/Quality_of_Service_Provided__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Service_Provided__c</fullName>
    <label>Quality of Service Provided</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>