force-app/main/default/objects/Case_Metric__c/fields/Reopen_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Rate__c</fullName>
    <label>Reopen Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>