force-app/main/default/objects/Case_Metric__c/fields/Solution_Article_Created__c.field-meta.xml
<CustomField>
    <fullName>Solution_Article_Created__c</fullName>
    <label>Solution Article Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>