force-app/main/default/objects/Case_Metric__c/fields/Time_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Close__c</fullName>
    <label>Time to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>