force-app/main/default/objects/Case_Metric__c/fields/Total_Cases_Closed__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases_Closed__c</fullName>
    <label>Total Cases Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>