force-app/main/default/objects/Case_Metric__c/fields/Week_Run__c.field-meta.xml
<CustomField>
    <fullName>Week_Run__c</fullName>
    <label>Week Run</label>
    <type>Date</type>
</CustomField>